Fixed a stupid paragraph spacing problem.

--- a/css/master.css
+++ b/css/master.css
@@ -79,7 +79,7 @@ section article header h2 {
     font-size: 16px;
 }
 section article p {
-    margin: 0;
+    margin: 0 0 10px 0;
     display: inline-block;
 }
 
